--- a/rs.html
+++ b/rs.html
@@ -53,8 +53,8 @@
 
     <div class="banner">
         <div class="mask"></div>
-      </div>
-       <main>
+    </div>  
+    <main>
         <div class="userCard">
           <div class="pictureAndText clearfix">
             <div class="picture">
@@ -101,11 +101,51 @@
         <a class="button" href="#">下载 PDF 简历</a>
     
         <p>
-          setret3
+          sdnfzihwiehfnklssdwejnfcoidEQKFCNAESJKFBNWDNLKWQAN
           <br> 技能：前端开发，Rails 开发，Node.js 开发
         </p>
     
-      </main> -->
+    </main>
+    <section class="skills">
+      <h1>技能</h1>
+        <ul class="clearfix">
+          <li>h5
+              <div class="progressBar">
+                  <div class="progress" style="width: 20%"></div>
+                </div>
+          </li>
+          <li>css3
+              <div class="progressBar">
+                  <div class="progress" style="width: 20%"></div>
+                </div>
+          </li>
+          <li>js
+              <div class="progressBar">
+                  <div class="progress" style="width: 20%"></div>
+                </div>
+          </li>
+          <li>vue
+              <div class="progressBar">
+                  <div class="progress" style="width: 20%"></div>
+                </div>
+          </li>
+          <li>node
+              <div class="progressBar">
+                  <div class="progress" style="width: 20%"></div>
+                </div>
+          </li>
+          <li>JQ
+              <div class="progressBar">
+                  <div class="progress" style="width: 20%"></div>
+                </div>
+          </li>
+        </ul>
+    </section>
+
+    <section>
+      <div></div>
+    </section>   
+
    
 </body>
 </html>
